@@ -1,4 +1,10 @@
 creating ChangeLog
+2003-03-27 David Malcolm
+
+	* cong-span-text-editor.c
+
+	Fix for bug #105915
+	
 2003-03-26 David Malcolm
 
 	* Makefile.am
